cmake_minimum_required( VERSION 3.22 )
get_filename_component( CURR_FILE_NAME ${CMAKE_CURRENT_LIST_FILE} NAME )
get_filename_component( CURR_DIR_NAME  ${CMAKE_CURRENT_LIST_DIR}  NAME )
include_guard(GLOBAL)
message(        "================================")
message(        "================================")
message(        "--       GitHub CI Test       --")
message(        "================================")
message(        "================================")
message( STATUS "CMAKE_CURRENT_LIST_DIR         : ${CMAKE_CURRENT_LIST_DIR}")
message( STATUS "CURRENT DIR / FILE             : ${CURR_DIR_NAME}/${CURR_FILE_NAME}")
message( STATUS "CMAKE_SOURCE_DIR               : ${CMAKE_SOURCE_DIR}")

#===============================================================================
#===============================================================================
#===============================================================================

project( GH_CI_TEST
  VERSION     0.0.0.0
  LANGUAGES   C  CXX
  DESCRIPTION
"\
GitHub CI Test\
"
  HOMEPAGE_URL  ""
  )

if( PROJECT_IS_TOP_LEVEL )
  message( ">>> enable testing" )
  # enable_testing()
  include(CTest)
endif()

#===============================================================================
#===============================================================================
#===============================================================================

set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)

#===============================================================================
#===============================================================================
#===============================================================================

set( CMAKE_CXX_STANDARD 20 )

#===============================================================================
#===============================================================================
#===============================================================================

add_subdirectory( Src )

#===============================================================================
#===============================================================================
#===============================================================================

# vim: nu:nowrap:tw=0
